<resources>
    <string name="app_name">ILAF</string>
    <string name="travel_insurence">Travel Insurance</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard_fragment_label">Home</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="products_fragment_label">Products</string>
    <string name="splash_fragment_label">Splash</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email">Email</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="date_of_birth">Select Date Of Birth</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="civil_id">Civil ID</string>
    <string name="login_fingerprint_face_id">Enable Fingerprint Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="travel_claims">Travel Claims</string>
    <string name="available_24hrs_7_days">Available 24Hrs ,/ 7 Days</string>
    <string name="comtact_no">Comtact No</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="login_as_guest">Continue as Guest</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_fragment_label">Login</string>
    <string name="save">SAVE</string>
    <string name="buy_insurence">Buy Insurance</string>
    <string name="claims">Claims</string>
    <string name="motor_insurence">Motor Insurance</string>
    <string name="quote">Quote</string>
    <string name="renew">Renew</string>
    <string name="corporate_qoutes">Corporate Quote</string>
    <string name="hospital_network">Hospital Network</string>
    <string name="assistance_for_claim">Assistance for Claim</string>
    <string name="login_or_register">Login or Register</string>
    <string name="loged_in_as_guest">Logged in as Guest</string>
    <string name="ilaf">ILAF</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="fga_insurance">FGA Insurance</string>
    <string name="marine_insurence">Marine Insurance</string>
    <string name="login_or_register_first">To use this service, you need to login or register first</string>
    <string name="reset">RESET</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="travel_plans">Travel Plans</string>
    <string name="platinum">Platinum</string>
    <string name="buy_now">Buy Now</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="request_swanaassistance_com">request@swanaassistance.com</string>
    <string name="police_station_report_papper">Police Station Report paper</string>
    <string name="date_of_accident">Date of accident(dd-mm-yyyy)</string>
    <string name="drive_id">Civil ID who drive at the time of accident</string>
    <string name="car_owner_civil_id">Car Owner Civil ID</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="insurence_policy_first_page">Insurence Policy First Page</string>
    <string name="photos_of_document">Photos Of Document</string>
    <string name="photos_of_vehicle_where_the_damage">Photos Of Vehicle Where The Damage</string>
    <string name="description">Description</string>
    <string name="sum_insured">Sum Insured</string>
    <string name="manufacture_year">Manufacture Year</string>
    <string name="type">Type</string>
    <string name="model">Model</string>
    <string name="agree_terms_and_condition"><u><![CDATA[Agree Terms & Conditions]]></u></string>
    <string name="expiry_date">Expiry Date</string>
    <string name="additional_services">Additional Services</string>
    <string name="name">Name</string>
    <string name="helth_description">Health insurance policies were designed to suit the individual needs . therefore the packages of Health insurance were designed to suit the companies</string>
    <string name="agree_terms_condtion"><u><![CDATA[Agree Terms & Condition]]></u></string>
    <string name="policy_no">Policy Number</string>
    <string name="policy_type">Policy Type</string>
    <string name="type_of_claim">Type Of Claim</string>
    <string name="date_of_sickness">Date Of Sickness</string>
    <string name="kuwait_exit_date">Kuwait Exit Date</string>
    <string name="kuwait_entry_date">Kuwait Entry Date</string>
    <string name="brief_derscription">Brief Description</string>
    <string name="claim_amount">Claim Amount</string>
    <string name="upload_document">Upload Document</string>
    <string name="you_have_to_come_to_ilaf_head_office_and_submit_all_the_originals_and_sign_the_claim_form">You have to come to ILAF head office and submit all the originals and sign the claim form</string>
    <string name="notify_travel_claim">Notify Travel Claim</string>
    <string name="conf_password">Confirm Password</string>
    <string name="company_details">Company Details</string>
    <string-array name="relation">
        <item>Select One</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Grandparents</item>
        <item>Grandchildren</item>
    </string-array>
    <string name="to_use_this_service_you_need_to_login_or_register_first">To use this service, You need to <br><![CDATA[login or register first]]></br></string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="log_out_warning">Do you want to log out ?</string>
    <string name="edit_family_list">Edit Family List</string>
    <string name="about_us">About Us</string>
    <string name="logotu_failed">Logout failed</string>
    <string name="driver_license_who_drive_at_the_time_of_acident">Driver license who drive at the time of accident</string>
    <string name="garage">Garage</string>
    <string name="notify_claim">Notify Claim</string>
    <string name="session_expiry">You session had been expired, Please Login</string>
    <string name="no_interbnet">You are Offline, Try again later !!</string>
    <string name="my_logs">My Logs</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="change_password">Change Password</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your New password must be different from previously used passwords.</string>
    <string name="make">Make</string>
    <string name="submit_quote">Submit Quote</string>
    <string name="front">Front</string>
    <string name="permission_needed">Camera Permission denied</string>
    <string name="format">%1$td/%1$tm/%1$tY</string>
    <string name="add_voice_note">add voice note</string>
    <string name="call_permission">Call Permission denied</string>
    <string name="agency">Agency</string>
    <string name="road_assistant">Road Assistant</string>
    <string name="outside">Outside</string>
    <string name="nationality">Nationality</string>
    <string name="confirm_terms_and_conditions">Confirm Terms And Conditions</string>
    <string name="policy_number">Policy Number</string>
    <string name="waiver_of_liability">Waiver of liability</string>
    <string name="renew_policy">Renew Policy</string>
    <string name="car_type">Car Type</string>
    <string name="_33_9_70_73_22_47">+33 9 70 73 22 47</string>
    <string name="_1_415_448_4417">+1 415 448 4417</string>
    <string name="_961_9_211_662">+961 9 211 662</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="passport_no">Passport No</string>
    <string name="family_name">Family Name</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="payment_failure">Payment Failed</string>
    <string name="payment_success">Payment Success</string>
    <string name="choose_family">Choose Family</string>
    <string name="edit">Edit</string>
    <string name="continue_tetx">Continue</string>
    <string name="passport_number">Passport Number</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="register_success">User registered successfully!!</string>
    <string name="registering">User registering !</string>
    <string name="register_failed">User registration Failed</string>
    <string name="no_travel_plans_available_right_now">No Travel Plans Available right now</string>
    <string name="staf_will_contact">ILAF staff will contact you for more details</string>
    <string name="add_family">Add Family Member</string>
    <string name="company_name">Company Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="department">Department</string>
    <string name="message">Message</string>
    <string name="your_message">Your Message</string>
    <string name="submit_request">Submit Request</string>
    <string name="choose_region">Choose Region</string>
    <string name="hospital_clinic_name">Hospital/Clinic name</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="send_mail">Send Mail</string>
    <string name="health_insurence">Health Insurance</string>
    <string name="manufacturing_year">Manufacturing Year</string>
    <string name="renewal_plan">Renewal Plan</string>
    <string name="total">Total</string>
    <string name="policy_option">Policy Option</string>
    <string name="policy_period">Policy Period</string>
    <string name="start_date">Start Date</string>
    <string name="to_date">To Date</string>
    <string name="family_list">Family List</string>
    <string name="add">Add</string>
    <string name="pay_now">Pay Now</string>
    <string name="available_24_hrs_7_days">Available 24 Hrs./7 Days</string>
    <string name="contact_no">Contact No</string>
    <string name="canada_usa">Canada / USA</string>
    <string name="france_europe">France / Europe</string>
    <string name="international">International</string>
    <string name="add_family_details">Add Family Member Details</string>
    <string name="download">Download</string>
    <string name="hint">hint</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="skip">Skip</string>
    <string name="more_details">More Details</string>
    <string name="three_yrs">3 Years</string>
    <string name="two_yrs">2 Years</string>
    <string name="six_months">Six Month</string>
    <string name="three_months">Three Month</string>
    <string name="two_months">Two Month</string>
    <string name="one_month">One Month</string>
    <string name="fifteen_days">15 days</string>
    <string name="one_week">One week</string>
    <string name="enter_passport_no">Enter Passport No</string>
    <string name="enter_civil_id">Enter Civil ID</string>
</resources>