<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


   <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
       android:layout_marginLeft="@dimen/margin_main"
       android:layout_marginRight="@dimen/margin_main"
       android:layout_marginTop="@dimen/margin_main"
        android:layout_height="wrap_content">
       <TextView
           android:id="@+id/textView3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/create_account"
           android:layout_weight="1"
           android:textColor="@color/white"
           android:fontFamily="@font/dmsans_bold"
           android:textSize="18dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <Switch
           android:id="@+id/textView5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_gravity="center"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent" />






   </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
         android:layout_marginLeft="@dimen/margin_main"
         android:layout_marginRight="@dimen/margin_main"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/test"
                    android:drawableLeft="@drawable/test"
                    android:hint="@string/enter_your_name"
                  />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/test"
                    android:drawableLeft="@drawable/test"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_gravity="center"


android:gravity="center"
    android:orientation="horizontal"

    android:layout_height="wrap_content">
    <Spinner
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
      />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/editText_no_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
       >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/editText_no_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mobile_number" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_of_birth"
                    android:fontFamily="@font/dmsans_reguler"
                    android:textColor="@color/text_color"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextTime"
                        style="@style/editText_no_margin"
                        android:layout_width="60dp"
                        android:layout_marginRight="@dimen/margin_item"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/mm"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/editTextDate"
                        style="@style/editText_no_margin"
                        android:layout_marginRight="@dimen/margin_item"  android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/dd"
                        android:inputType="date" />

                    <EditText
                        android:id="@+id/editTextDate2"
                        style="@style/editText_no_margin"
                        android:layout_marginRight="@dimen/margin_item"         android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/yyyy"
                        android:inputType="date" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_item"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_reguler"
                    android:text="@string/gender"
                    android:textColor="@color/text_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/switch1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/test"
                    android:drawableLeft="@drawable/test"
                    android:hint="@string/civil_id" />
            </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/margin_main"
     android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="center"

    android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/textView9"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/test"
                android:text="TextView"
             />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"
                android:text="@string/login_fingerprint_face_id"
                android:textColor="@color/white"
           />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
               />
</LinearLayout>
            <Button
                android:id="@+id/button3"
                style="@style/AccentButton"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="602dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                 android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:fontFamily="@font/dmsans_reguler"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/dmsans_medium"
                android:textSize="18dp"
                android:text="@string/login"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
 />

        </LinearLayout>

    </LinearLayout>





</ScrollView>