<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="fragment"
        type="com.ilaftalkful.mobileonthego.base.IlafBaseFragment" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottum_curve">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <LinearLayout
            android:id="@+id/header_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_rounded"
            android:minWidth="100dp"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/available_24_hrs_7_days" />
        </LinearLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />
        <TextView
            android:id="@+id/txt_contatc_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="10dp"
            android:text="@string/contact_no"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/txt_canada_usa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/bg_bulletin_contact"
            android:drawablePadding="10dp"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/canada_usa"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/txt_contatc_no"
            app:layout_constraintTop_toBottomOf="@+id/txt_contatc_no" />

        <TextView
            android:id="@+id/txt_france_europe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/bg_bulletin_contact"
            android:drawablePadding="10dp"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/france_europe"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/txt_contatc_no"
            app:layout_constraintTop_toBottomOf="@+id/txt_canada_usa" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/bg_bulletin_contact"
            android:drawablePadding="10dp"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/international"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/txt_contatc_no"
            app:layout_constraintTop_toBottomOf="@+id/txt_france_europe" />

        <TextView
            android:id="@+id/txt_contact_canada_usa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/_1_415_448_4417"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:clickable="true"
            android:onClick="@{(v)->fragment.onContctNumberClicked(v)}"
            app:layout_constraintEnd_toEndOf="@+id/txt_contatc_no"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/txt_contatc_no"
            app:layout_constraintStart_toEndOf="@+id/guideline2" />

        <TextView
            android:id="@+id/txt_contact_france_europe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/_33_9_70_73_22_47"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:clickable="true"
            android:onClick="@{(v)->fragment.onContctNumberClicked(v)}"
            app:layout_constraintEnd_toEndOf="@+id/txt_contact_canada_usa"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/txt_contact_canada_usa"
            app:layout_constraintStart_toEndOf="@+id/guideline2" />

        <TextView
            android:id="@+id/txt_contact_internation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/_961_9_211_662"
            android:onClick="@{(v)->fragment.onContctNumberClicked(v)}"
            android:textAlignment="textEnd"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/txt_contact_france_europe"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/txt_contact_france_europe"
            app:layout_constraintStart_toEndOf="@+id/guideline2" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/email"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_contatc_no"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="#FAFAFA"
            app:layout_constraintEnd_toEndOf="@+id/txt_contact_internation"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/txt_email_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/dmsans_bold"
            android:minWidth="100dp"
            android:padding="5dp"
            android:clickable="true"
            android:onClick="@{(v)->fragment.onEmailClicked(v)}"
            android:text="@string/request_swanaassistance_com"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_contatc_no"
            app:layout_constraintTop_toBottomOf="@id/view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
